Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetTextObj.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
