Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetTextObjFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
